hphp/hack/test/typecheck/reactive/test_rx_enabled1.php.coeffects.exp
File "test_rx_enabled1.php", line 3, characters 7-19:
`\HH\Rx\IS_ENABLED` requires the capability Rx, which is not provided by the context. (Typing[4401])
  File "test_rx_enabled1.php", line 2, characters 14-24:
  The local (enclosing) context provides the capability WriteProperty
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "test_rx_enabled1.php", line 4, characters 12-15:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "test_rx_enabled1.php", line 2, characters 14-24:
  From this declaration, the context of this function body provides the capability WriteProperty
  File "test_rx_enabled1.php", line 11, characters 15-16:
  But the function being called requires the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
